--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
-  "author": "Rea Lyn G. Cuadrante",
+  "author": "Marjun A. Goyala",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
